# MlOps-course-lab11

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  main.py  pyproject.toml  sam-template.yaml
.github/workflows/: ci_cd_workflow.yaml  hello_world.yaml
sentiment_app/: app.py  training.py
src/scripts/: download.py  download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  settings.py
src_sentiment-app/: app.py  inference.py  main.py  settings.py
tests/: test_app.py
