[project]
name = "mlops-course-lab11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[dependency-groups]
deployment = [
    "boto3>=1.42.13",
    "joblib>=1.5.3",
    "numpy>=2.3.5",
    "onnx>=1.20.0",
    "onnxruntime>=1.23.2",
    "pydantic-settings>=2.12.0",
    "skl2onnx>=1.19.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
inference = [
    "awslambdaric>=3.1.1",
    "clean-text>=0.6.0",
    "fastapi>=0.125.0",
    "mangum>=0.19.0",
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "pydantic-settings>=2.12.0",
    "tokenizers>=0.22.1",
    "uvicorn>=0.38.0",
]
integration = [
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "fastapi>=0.100.0",
    "httpx>=0.28.1",
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
